--- a/profile.css
+++ b/profile.css
@@ -6,7 +6,7 @@
 }
 
 .container{
-    width: 100%;
+    width: 100px;
     height: 100px;
     background-image: url(images/purple-bg.webp);
     background-size: cover;
